# servebox

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: config_file.rs  host_guard.rs  main.rs
