[package]
name = "servebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.19"
serde = "1.0.166"
serde_derive = "1.0.166"
toml = "0.7.5"
